Changes for 0.9: partitioning and simulations