@@ -30,3 +30,13 @@ initialCommands in console := "import scalaz._, Scalaz._"
 
 exportJars := false
 
+fork := false 
+
+javaOptions in run += "-XX:+UseConcMarkSweepGC"
+
+javaOptions in run += "-XX:+CMSClassUnloadingEnabled"
+ 
+javaOptions in run += "-XX:PermSize=512M" 
+
+javaOptions in run += "-XX:MaxPermSize=512M"
+
